fix overlap

--- a/assets/css/shortcodes/amazon.css
+++ b/assets/css/shortcodes/amazon.css
@@ -3,13 +3,6 @@
     max-width: 480px;
     position: relative;
 }
-.amazon-widget a {
-    position: absolute;
-    top:0;
-    left:0;
-    height: 100%;
-    width: 100%;
-}
 .amazon-widget-img {
     border: 1px solid #E1E8ED;
     border-radius: 15px 15px 0 0;
@@ -33,7 +26,7 @@
     display: block;
 }
 .amazon-widget-via {
-    color: #aaa;
+    color: #gray;
 }
 .amazon-widget-via img {
     border: none;
